@@ -55,3 +55,5 @@ polrootsmod(x^10-1, 1023)
 polrootsmod(Pol(0),p)
 polrootsmod(Pol(0),2)
 factormod(x,0)
+factormod(x^3+1,[y^2+1,2])
+factormod(x^3+1,[y^2+1,5])
