@@ -85,6 +85,8 @@ BA  59- ffinvmap(m) could SEGV on bad input
     63- strsplit("abc", "") -> SEGV
     64- strsplit("aa", "a") -> gc error
     65- poldiscfactors(x^0) -> division by 0
+    66- factormod(x^3+1,[y^2+1,2]) -> SEGV
+    67- factormod(x^3+1,[y^2+1,5]) -> weird error message
 
   Changed
      1- [libpari] gp_filter return value is now allocated on the stack
